[gd_scene load_steps=5 format=3 uid="uid://i4ituy4kmbvh"]

[ext_resource type="Script" path="res://Assets/Scripts/menu_screen.gd" id="1_3ycpn"]
[ext_resource type="Texture2D" uid="uid://c0efr8dxdxapj" path="res://Assets/Images/Monarch.png" id="2_6i0nx"]
[ext_resource type="Texture2D" uid="uid://16yt6huyjlm6" path="res://Assets/Images/Bloody_Sky.jpg" id="2_b3nn1"]
[ext_resource type="Texture2D" uid="uid://cefaocad4cd8d" path="res://Assets/Sprites/Background_Console.png" id="3_hafgg"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_3ycpn")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_b3nn1")
expand_mode = 3
stretch_mode = 4

[node name="Title" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.087
anchor_right = 0.733
anchor_bottom = 0.352
offset_top = 0.319996
offset_right = 16.3199
offset_bottom = -0.280045
grow_horizontal = 2
texture = ExtResource("2_6i0nx")
expand_mode = 2

[node name="Play" type="Button" parent="Background/Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.295
anchor_top = 5.488
anchor_right = 0.703
anchor_bottom = 6.463
offset_left = 2.40001
offset_top = -727.472
offset_right = 2.37601
offset_bottom = -831.012
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Press Start"

[node name="Options" type="Button" parent="Background/Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.295
anchor_top = 7.244
anchor_right = 0.703
anchor_bottom = 8.22
offset_left = 2.40001
offset_top = -928.236
offset_right = 2.37601
offset_bottom = -1031.94
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Options"

[node name="Credits" type="Button" parent="Background/Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.295
anchor_top = 9.0
anchor_right = 0.703
anchor_bottom = 9.976
offset_left = 2.40001
offset_top = -1129.0
offset_right = 2.37601
offset_bottom = -1232.71
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Credits"

[node name="Exit" type="Button" parent="Background/Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.295
anchor_top = 10.756
anchor_right = 0.703
anchor_bottom = 11.732
offset_left = 2.40001
offset_top = -1329.76
offset_right = 2.37601
offset_bottom = -1433.47
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Exit to Desktop"

[node name="OptionsT" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -198.383
offset_right = 240.0
offset_bottom = 198.383
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("3_hafgg")

[node name="Options" type="VBoxContainer" parent="Background/OptionsT"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background/OptionsT/Options"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Background/OptionsT/Options/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CheckButton" type="CheckButton" parent="Background/OptionsT/Options/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
button_pressed = true

[node name="RichTextLabel" type="RichTextLabel" parent="Background/OptionsT/Options/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(98.905, 24.055)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "CRT effects"

[node name="MarginContainer2" type="MarginContainer" parent="Background/OptionsT/Options"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Background/OptionsT/Options/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSlider" type="HSlider" parent="Background/OptionsT/Options/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(143.08, 0)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Background/OptionsT/Options/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(227.115, 0)
layout_mode = 2
text = "Master Volume"

[node name="MarginContainer4" type="MarginContainer" parent="Background/OptionsT/Options"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Background/OptionsT/Options/MarginContainer4"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSlider" type="HSlider" parent="Background/OptionsT/Options/MarginContainer4/HBoxContainer"]
custom_minimum_size = Vector2(143.08, 0)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Background/OptionsT/Options/MarginContainer4/HBoxContainer"]
custom_minimum_size = Vector2(181.065, 0)
layout_mode = 2
text = "BGM Volume"

[node name="MarginContainer5" type="MarginContainer" parent="Background/OptionsT/Options"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Background/OptionsT/Options/MarginContainer5"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSlider" type="HSlider" parent="Background/OptionsT/Options/MarginContainer5/HBoxContainer"]
custom_minimum_size = Vector2(143.08, 0)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Background/OptionsT/Options/MarginContainer5/HBoxContainer"]
custom_minimum_size = Vector2(181.065, 0)
layout_mode = 2
text = "SFX Volume"

[node name="MarginContainer3" type="MarginContainer" parent="Background/OptionsT/Options"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Background/OptionsT/Options/MarginContainer3"]
layout_mode = 2
focus_mode = 0
text = "Return to Menu"

[node name="CreditsT" type="TextureRect" parent="Background"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -198.383
offset_right = 240.0
offset_bottom = 198.383
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("3_hafgg")

[node name="RichTextLabel" type="RichTextLabel" parent="Background/CreditsT"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "THESE ARE CREDITS :O"

[node name="Button2" type="Button" parent="Background/CreditsT"]
layout_mode = 2
offset_top = 266.0
offset_right = 480.0
offset_bottom = 396.0
focus_mode = 0
text = "Return to Menu"

[connection signal="pressed" from="Background/Title/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Background/Title/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Background/Title/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Background/Title/Exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="Background/OptionsT/Options/MarginContainer/HBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="value_changed" from="Background/OptionsT/Options/MarginContainer2/HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Background/OptionsT/Options/MarginContainer4/HBoxContainer/HSlider" to="." method="BGMSliderChange"]
[connection signal="value_changed" from="Background/OptionsT/Options/MarginContainer5/HBoxContainer/HSlider" to="." method="SFXChange"]
[connection signal="pressed" from="Background/OptionsT/Options/MarginContainer3/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Background/CreditsT/Button2" to="." method="_on_button_pressed"]
